--- a/components/cascader/style/patch.less
+++ b/components/cascader/style/patch.less
@@ -1,3 +1,7 @@
+.ant-cascader-dropdown {
+  padding: 0;
+}
+
 .ant-cascader-menus {
   position: relative;
   margin-top: 2px;
